# chat

./: README.md  command.js  command.py  db.sqlite3  package-lock.json  pyproject.toml
apps/accounts/: models.py  signals.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  password_reset_email.html
apps/chat_messages/: admin.py  apps.py  models.py  signals.py
apps/chat_messages/migrations/: 0001_initial.py  0002_rename_type_message_scope.py  0003_remove_message_scope_remove_message_user_action_and_more.py
apps/chat_messages/tests/: test_views.py
apps/rooms/: admin.py  apps.py  consumers.py  consumers_old.py  forms.py  models.py  routing.py  signals.py  urls.py  views.py
apps/rooms/migrations/: 0001_initial.py
apps/rooms/static/shared/js/: consumers.js  consummers copy.js  modal_utils.js  notifications.js
apps/rooms/templates/rooms/: detail.html  list.html
apps/rooms/templates/rooms/partials/: delete_room_modal.html  leave_room_modal.html  room_form_modal.html
apps/rooms/tests/: test_models.py
apps/shared/: logging.py
apps/shared/management/commands/: load_fake_data.py
core/: asgi.py  settings.py  urls.py
templates/: base.html  index.html
templates/partials/: footer.html  header.html
theme/static_src/: package-lock.json
