[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali YARO",email = "aliyaro104@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "channels (>=4.2.0,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "twisted[http2,tls] (>=24.11.0,<25.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "django-tailwind[reload] (>=3.8.0,<4.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "django-phonenumber-field[phonenumbers] (>=8.0.0,<9.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.3"
faker = "^37.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
